[package]
name = "color-reduction"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-graph = "0.21"
rand = "0.8.5"
clap = { version = "4.4.7", features = ["color", "suggestions", "derive", "cargo"] }